# treehopper-sdk

./: .gitignore  LICENSE  README.md  Treehopper.sln  Treehopper.sln.DotSettings  TreehopperNet.sln  TreehopperUWP.sln  TreehopperWin32.sln
C++/: CMakeLists.txt
C++/API/: CMakeLists.txt
C++/API/Treehopper/: CMakeLists.txt  ConnectionService.h  Pin.cpp  Pin.h  Pins.cpp  Pins.h  Property.h  Pwm.cpp  Treehopper.vcxproj  Treehopper.vcxproj.filters  TreehopperBoard.cpp  TreehopperBoard.h  TreehopperManager.cpp  TreehopperManager.h  TreehopperUsb.cpp  TreehopperUsb.h  UsbConnection.cpp  UsbConnection.h  Utilities.cpp  Utilities.h  WinConnectionService.cpp  WinUsbConnection.cpp  WinUsbConnection.h  stdafx.cpp  stdafx.h
C++/API/Treehopper.Libraries/: CMakeLists.txt  ReadMe.txt  Treehopper.Libraries.vcxproj  Treehopper.Libraries.vcxproj.filters
C++/API/Treehopper.Libraries/Treehopper.Libraries.xcodeproj/: project.pbxproj
C++/API/Treehopper.Libraries/inc/: Pollable.h  Register.h  RegisterManager.h  Treehopper.Libraries.h
C++/API/Treehopper.Libraries/inc/Displays/: Dm632.h  Led.h  LedDriver.h  Utility.h
C++/API/Treehopper.Libraries/inc/Input/: RotaryEncoder.h
C++/API/Treehopper.Libraries/inc/Interface/: Flushable.h
C++/API/Treehopper.Libraries/inc/Motors/: SeeedGroveI2cMotorDriver.h
C++/API/Treehopper.Libraries/inc/Sensors/: ProximitySensor.h
C++/API/Treehopper.Libraries/src/: Pollable.cpp  Register.cpp  RegisterManager.cpp  Types.cpp  dllmain.cpp  stdafx.cpp
C++/API/Treehopper.Libraries/src/Displays/: Dm632.cpp  Led.cpp  LedDriver.cpp
C++/API/Treehopper.Libraries/src/Input/: RotaryEncoder.cpp
C++/API/Treehopper.Libraries/src/Motors/: SeeedGroveI2cMotorDriver.cpp
C++/API/Treehopper.Libraries/src/Optical/: AmbientLightSensor.cpp
C++/API/Treehopper/Treehopper.xcodeproj/: project.pbxproj
C++/API/Treehopper/inc/: ConnectionService.h  DigitalIn.h  DigitalOut.h  Event.h  HardwareI2c.h  HardwarePwm.h  HardwarePwmFrequency.h  HardwarePwmManager.h  HardwareSpi.h  I2c.h  I2cTransferError.h  I2cTransferException.h  LibUsbConnection.h  MacUsbConnection.h  Pin.h  SMBusDevice.h  Settings.h  Spi.h  SpiChipSelectPin.h  SpiDevice.h  SpiMode.h  Treehopper.h  TreehopperUsb.h  UsbConnection.h  Utility.h  WinUsbConnection.h  stdafx.h
C++/API/Treehopper/src/: HardwareI2c.cpp  HardwarePwm.cpp  HardwarePwmManager.cpp  HardwareSpi.cpp  MacConnectionService.cpp  MacUsbConnection.cpp  MacUsbConnectionService.cpp  Pin.cpp  SMBusDevice.cpp  TreehopperUsb.cpp  Utility.cpp  WinConnectionService.cpp  WinUsbConnection.cpp
C++/API/Treehopper/src/linux/: ConnectionService.cpp  LibUsbConnection.cpp  LinuxConnectionService.cpp
C++/API/Treehopper/src/mac/: MacConnectionService.cpp  MacUsbConnection.cpp
C++/API/Treehopper/src/win/: WinConnectionService.cpp  WinUsbConnection.cpp  dllmain.cpp
C++/API/TreehopperOld/: AnalogIn.cpp  AnalogIn.h  CMakeLists.txt  Pins.cpp  Pwm.h  Treehopper.h  Treehopper.vcxproj  TreehopperBoard.cpp  TreehopperManager.h
C++/API/Treehopper_Static/: Treehopper_Static.vcxproj  Treehopper_Static.vcxproj.filters
C++/API/inc/: AdcPin.h  ChipSelectMode.h  ConnectionService.h  DigitalIn.h  DigitalOut.h  Event.h  HardwareI2c.h  HardwarePwm.h  HardwarePwmFrequency.h  HardwarePwmManager.h  HardwareSpi.h  HardwareUart.h  I2c.h  I2cTransferError.h  I2cTransferException.h  LibUsbConnection.h  MacUsbConnection.h  OneWire.h  Pin.h  Pwm.h  SMBusDevice.h  Settings.h  Spi.h  SpiBurstMode.h  SpiChipSelectPin.h  SpiDevice.h  SpiMode.h  Treehopper.h  TreehopperUsb.h  Uart.h  UsbConnection.h  Utility.h  WinUsbConnection.h
C++/API/inc/Libraries/: Pollable.h  Treehopper.Libraries.h  Types.h
C++/API/inc/Libraries/Displays/: Dm632.h  Led.h  LedDriver.h  Utility.h
C++/API/inc/Libraries/IO/: Flushable.h
C++/API/inc/Libraries/Input/: RotaryEncoder.h
C++/API/inc/Libraries/Interface/: Flushable.h
C++/API/inc/Libraries/Motors/: SeeedGroveI2cMotorDriver.h  (+1 more)
C++/API/src/: HardwareI2c.cpp  HardwarePwm.cpp  HardwarePwmManager.cpp  HardwareSpi.cpp  HardwareUart.cpp  Pin.cpp  SMBusDevice.cpp  TreehopperUsb.cpp  Utility.cpp
C++/API/src/libraries/: Register.cpp  RegisterManager.cpp
C++/API/src/linux/: LibUsbConnection.cpp
C++/API/src/mac/: MacUsbConnection.cpp
C++/API/src/win/: WinConnectionService.cpp  WinUsbConnection.cpp  dllmain.cpp
C++/Demos/AnalogRead/: AnalogRead.cpp  AnalogRead.vcxproj  AnalogRead.vcxproj.filters  CMakeLists.txt
C++/Demos/AnalogRead/AnalogRead/: AnalogRead.cpp  AnalogRead.vcxproj  AnalogRead.vcxproj.filters  stdafx.cpp
C++/Demos/Blink/: Blink.cpp  Blink.vcxproj  Blink.vcxproj.filters  CMakeLists.txt  ReadMe.txt  stdafx.h
C++/Demos/Blink/Blink.xcodeproj/: project.pbxproj
C++/Demos/BlinkStaticLink/: Blink.cpp  BlinkStaticLink.vcxproj  stdafx.h
C++/Demos/DigitalIn/: CMakeLists.txt  DigitalIn.cpp  DigitalIn.vcxproj
C++/Demos/I2cDeviceScanner/: CMakeLists.txt  I2cDeviceScanner.cpp  I2cDeviceScanner.vcxproj  I2cDeviceScanner.vcxproj.filters  ReadMe.txt  stdafx.cpp
C++/Demos/Libraries/Dm632/: CMakeLists.txt  Dm632.cpp
C++/Demos/Libraries/ImuDemo/: CMakeLists.txt  ImuDemo.cpp
C++/Demos/Libraries/RotaryEncoder/: CMakeLists.txt  RotaryEncoder.cpp
C++/Demos/Libraries/TemperatureDemo/: TemperatureDemo.cpp
C++/Demos/Pwm/: CMakeLists.txt  Pwm.cpp  Pwm.vcxproj  stdafx.cpp
C++/Demos/Sandbox/: CMakeLists.txt  Sandbox.cpp
C++/Documentation/: Doxyfile  treehopper.css
C++/Libraries/Demos/Dm632/: Dm632.cpp  Dm632.vcxproj
C++/Libraries/Demos/ImuDemo/: CMakeLists.txt  ImuDemo.cpp
C++/Libraries/Demos/RotaryEncoder/: CMakeLists.txt  RotaryEncoder.cpp  RotaryEncoder.vcxproj
C++/Libraries/Demos/TemperatureDemo/: TemperatureDemo.cpp  TemperatureDemo.vcxproj  stdafx.cpp
C++/Treehopper.xcworkspace/: contents.xcworkspacedata
C++/Treehopper.xcworkspace/xcuserdata/jay.xcuserdatad/: UserInterfaceState.xcuserstate
(+2538 files in other folders)
